<resources>
    <string name="app_name">SummaryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_logo_description">welcome_logo</string>
    <string name="number_composition">Состав числа</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="understand">Понятно</string>
    <string name="choose_lvl">Выберите уровень</string>
    <string name="test">Тест</string>
    <string name="easy">Легкий</string>
    <string name="medium">Средний</string>
    <string name="hard">Сложный</string>
    <string name="question_mark">\?</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="result_image">result_image</string>
    <string name="right_answers">Ваш счет: %s</string>
    <string name="required_answers">Необходимое количество правильных ответов: %s</string>
    <string name="time_spent">Время затрачено: %s секунд</string>
    <string name="try_again">Попробовать снова</string>
</resources>