<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/choose_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/choose_lvl"
            android:textSize="24.sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/test_lvl_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/test" />

        <Button
            android:id="@+id/easy_lvl_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/easy" />

        <Button
            android:id="@+id/normal_lvl_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/medium" />

        <Button
            android:id="@+id/hard_lvl_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/hard" />

    </LinearLayout>
</layout>
