<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/welcome_fragment_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/brain_image_view"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="32dp"
                android:contentDescription="@string/welcome_logo_description"
                android:src="@drawable/ic_brain" />

            <TextView
                android:id="@+id/game_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/number_composition"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/game_rules_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16.dp"
                android:text="@string/game_rules"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/start_game_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/understand" />
        </LinearLayout>
    </ScrollView>
</layout>